<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2018-2021 Alexander Schmid
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.alexqp</groupId>
    <artifactId>redye-parent</artifactId>
    <version>2.9.1</version>
    <modules>
        <module>redye_core</module>
        <module>redye_craftbukkit_1_13_R1</module>
        <module>redye_dist</module>
        <module>redye_craftbukkit_1_13_R2</module>
        <module>redye_craftbukkit_1_14_R1</module>
        <module>redye_craftbukkit_1_15_R1</module>
        <module>redye_craftbukkit_1_16_R1</module>
        <module>redye_craftbukkit_1_16_R2</module>
        <module>redye_craftbukkit_1_16_R3</module>
        <module>redye_craftbukkit_1_17_R1</module>
        <module>redye_craftbukkit_1_18_R1</module>
    </modules>
    <name>Redye</name>
    <url>https://www.spigotmc.org/members/alex_qp.306806/</url>
    <description>This plugin provides crafting recipes for redying.</description>
    <packaging>pom</packaging>
    <properties>
        <buildNo/>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>